# simbotic-gams

./: .gitignore  .gitmodules  Dockerfile  README.md  waypoints.sh
multiagent/: .gitignore  CMakeLists.txt  main.cpp  waypoints.sh
multiagent/algorithms/: circus.cpp  circus.h
